Fix crash bug in AccountTrackerService

When an account is removed from AccountTrackerService
before the corresponding image has been fetched, Chrome
crashes. This CL fixes this.

Bug: 812634
Change-Id: I16fd69abafab50e3239272943e0a957b8153d62c
Reviewed-on: https://chromium-review.googlesource.com/921722
Commit-Queue: Thomas Tangl <tangltom@chromium.org>
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537052}
Former-commit-id: 84395bdb14b91f78f991303753520f6d3f842c2f